Fix html structure, clean css, remove duplicates. update icons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <li class="card-set-item">
         <div class="advanteges-list-icons-conteiner">
           <svg class="" width="64" height="64">
-            <use href="./images/icon-antenna.svg"></use>
+            <use href="./images/icon.svg#icons-antenna"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Strategy</h3>
@@ -65,8 +65,8 @@
       </li>
       <li class="card-set-item">
         <div class="advanteges-list-description">
-          <svg class="64" width="64" height="64">
-            <use href="./images/icon-clock.svg"></use>
+          <svg class="" width="64" height="64">
+            <use href="./images/icon.svg#icons-clock"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Punctuality</h3>
@@ -75,7 +75,7 @@
       <li class="card-set-item">
         <div class="advanteges-list-icons-conteiner">
           <svg class="" width="64" height="64">
-            <use href="./images/icon-diagram.svg"></use>
+            <use href="./images/icon.svg#icons-diagram"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Diligence</h3>
@@ -84,7 +84,7 @@
       <li class="features-item">
         <div class="advanteges-list-icons-conteiner">
           <svg class="" width="64" height="64">
-            <use href="./images/icon-astronaut.svg"></use>
+            <use href="./images/icon.svg#icons-astronaut"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Technologies</h3>
@@ -107,31 +107,30 @@
         <p class="our-team-list-description">Product Designer</p>
         <ul class="items-social-networks">
         <li class="icons-conteiner">
-          <a href="" class="icons-social-networks">
+          <a href="" class="icons-social-networks" aria-label="Instagram">
              <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon-instagram.svg"></use>
+              <use href="./images/icon.svg#icon-instagram"></use>
              </svg>
           </a>
         </li>
-      </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks">
+        <a href="" class="icons-social-networks" aria-label="Twitter">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon-twitter.svg"></use>
+              <use href="./images/icon.svg#icon-twitter"></use>
             </svg>
         </a>
       </li>
       <li class="icons-conteiner">
-         <a href="" class="icons-social-networks">
+         <a href="" class="icons-social-networks" aria-label="Facabook">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon-facebook.svg"></use>
+              <use href="./images/icon.svg#icon-facebook"></use>
             </svg>
          </a>
       </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks">
+        <a href="" class="icons-social-networks" aria-label="Linkedin">
           <svg class="svg-icons" width="16" height="16">
-            <use href="./images/icon-linkedin.svg"></use>
+            <use href="./images/icon.svg#icon-linkedin"></use>
           </svg>
         </a>
       </li>
@@ -145,30 +144,30 @@
         <p class="our-team-list-description">Frontend Developer</p>
         <ul class="items-social-networks">
           <li class="icons-conteiner">
-            <a href="" class="icons-social-networks">
+            <a href="" class="icons-social-networks" aria-label="Instagram">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icon-instagram.svg"></use>
+                <use href="./images/icon.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="icons-conteiner">
-            <a href="" class="icons-social-networks">
+            <a href="" class="icons-social-networks" aria-label="Twitter">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icon-twitter.svg"></use>
+                <use href="./images/icon.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
              <li class="icons-conteiner">
-                <a href="" class="icons-social-networks">
+                <a href="" class="icons-social-networks" aria-label="Facabook">
                     <svg class="svg-icons" width="16" height="16">
-                       <use href="./images/icon-facebook.svg"></use>
+                       <use href="./images/icon.svg#icon-facebook"></use>
                          </svg>
                        </a>
                     </li>
                     <li class="icons-conteiner">
-                        <a href="" class="icons-social-networks">
+                        <a href="" class="icons-social-networks" aria-label="Linkedin">
                             <svg class="svg-icons" width="16" height="16">
-                             <use href="./images/icon-linkedin.svg"></use>
+                             <use href="./images/icons.svg#icon-linkedin"></use>
                           </svg>
                       </a>
                      </li>
@@ -184,30 +183,30 @@
         <p class="our-team-list-description">Marketing</p>
         <ul class="items-social-networks">
         <li class="icons-conteiner">
-          <a href="" class="icons-social-networks">
+          <a href="" class="icons-social-networks" aria-label="Instagram">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icon-instagram.svg"></use>
+                <use href="./images/icon.svg#icon-instagram"></use>
             </svg>
           </a>
        </li>
         <li class="icons-conteiner">
-          <a href="" class="icons-social-networks">
+          <a href="" class="icons-social-networks" aria-label="Twitter">
             <svg class="svg-icons" width="16" height="16">
-             <use href="./images/icon-twitter.svg"></use>
+             <use href="./images/icon.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
        <li class="icons-conteiner">
-        <a href="" class="icons-social-networks">
+        <a href="" class="icons-social-networks" aria-label="Facabook">
           <svg class="svg-icons" width="16" height="16">
-          <use href="./images/icon-facebook.svg"></use>
+          <use href="./images/icon.svg#icon-facebook"></use>
         </svg>
       </a>
     </li>
    <li class="icons-conteiner">
-     <a href="" class="icons-social-networks">
+     <a href="" class="icons-social-networks" aria-label="Linkedin">
        <svg class="svg-icons" width="16" height="16">
-         <use href="./images/icon-linkedin.svg"></use>
+         <use href="./images/icon.svg#icon-linkedin"></use>
        </svg>
       </a>
     </li>
@@ -219,32 +218,32 @@
          <div class="text-container-team">
         <h3 class="our-team-list-name">Daniel Wilson</h3>
         <p class="our-team-list-description">UI Designer</p>
-        <ul class="icons-social-networks">
+        <ul class="items-social-networks">
           <li class="icons-conteiner">
-          <a href="" class="icons-social-networks">
+          <a href="" class="icons-social-networks" aria-label="Instagram">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon-instagram.svg"></use>
+              <use href="./images/icon.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
      <li class="icons-conteiner">
-      <a href="" class="icons-social-networks">
+      <a href="" class="icons-social-networks" aria-label="Twitter">
         <svg class="svg-icons" width="16" height="16">
-          <use href="./images/icon-twitter.svg"></use>
+          <use href="./images/icon.svg#icon-twitter"></use>
        </svg>
       </a>
      </li>
     <li class="icons-conteiner">
-      <a href="" class="icons-social-networks">
+      <a href="" class="icons-social-networks" aria-label="Facabook">
         <svg class="svg-icons" width="16" height="16">
-          <use href="./images/icon-facebook.svg"></use>
+          <use href="./images/icon.svg#icon-facebook"></use>
         </svg>
        </a>
       </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks">
+        <a href="" class="icons-social-networks" aria-label="Linkedin">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon-linkedin.svg"></use>
+              <use href="./images/icon.svg#icon-linkedin"></use>
             </svg>
           </a>
        </li>
@@ -258,7 +257,8 @@
     <h2 class="section-title">Our Portfolio</h2>
     <ul class="card-set-portfolio">
       <li class="card-set-portfolio-item">
-        <div class="img-transform">
+        <a class="portfolio-link" href="">
+        <div class="img-container">
         <img src="./images/prj1.jpg" alt="Banking App interface" width="360" height="300">
          <p class="text-overlay">
           14 Stylish and User-Friendly App Design Concepts · Task
@@ -267,13 +267,15 @@
          </p>
         </div>
         <div class="text-container">
-          <h3 class="portfolio-list">Banking App</h3>
-          <p class="portfolio-descrsption">App</p>
+          <h3 class="portfolio-title">Banking App</h3>
+          <p class="portfolio-category">App</p>
         </div>
+        </a>
       </li>
 
       <li class="card-set-portfolio-item">
-        <div class="img-transform">
+        <a class="portfolio-link" href="">
+        <div class="img-container">
         <img src="./images/prj2.jpg" alt="Cashless Payment flow" width="360" height="300">
         <p class="text-overlay">
          14 Stylish and User-Friendly App Design Concepts · Task
@@ -282,13 +284,15 @@
           </p>
         </div>
         <div class="text-container">
-          <h3 class="portfolio-list">Cashless Payment</h3>
-          <p class="portfolio-descrsption">Marketing</p>
+          <h3 class="portfolio-title">Cashless Payment</h3>
+          <p class="portfolio-category">Marketing</p>
         </div>
+        </a>
       </li>
 
       <li class="card-set-portfolio-item">
-        <div class="img-transform">
+        <a class="portfolio-link" href="">
+        <div class="img-container">
         <img src="./images/prj3.jpg" alt="Meditation App screens" width="360" height="300">
           <p class="text-overlay">
             14 Stylish and User-Friendly App Design Concepts · Task
@@ -297,13 +301,15 @@
           </p>
         </div>
         <div class="text-container">
-          <h3 class="portfolio-list">Meditation App</h3>
-          <p class="portfolio-descrsption">App</p>
+          <h3 class="portfolio-title">Meditation App</h3>
+          <p class="portfolio-category">App</p>
         </div>
+        </a>
       </li>
 
       <li class="card-set-portfolio-item">
-        <div class="img-transform">
+        <a class="portfolio-link" href="">
+        <div class="img-container">
         <img src="./images/prj4.jpg" alt="Taxi Service booking" width="360" height="300">
             <p class="text-overlay">
             14 Stylish and User-Friendly App Design Concepts · Task
@@ -313,13 +319,15 @@
         </div>
 
          <div class="text-container"> 
-          <h3 class="portfolio-list">Taxi Service</h3>
-          <p class="portfolio-descrsption">Marketing</p>
+          <h3 class="portfolio-title">Taxi Service</h3>
+          <p class="portfolio-category">Marketing</p>
          </div>
+        </a>
          </li>
 
       <li class="card-set-portfolio-item">
-        <div class="img-transform">
+        <a class="portfolio-link" href="">
+        <div class="img-container">
         <img src="./images/prj5.jpg" alt="Screen Illustrations set" width="360" height="300">
              <p class="text-overlay">
               14 Stylish and User-Friendly App Design Concepts · Task
@@ -327,25 +335,28 @@
               · Cloud Storage App
             </p>
         </div>
-      </li>
        <div class="text-container">
-          <h3 class="portfolio-list">Screen Illustrations</h3>
-          <p class="portfolio-descrsption">Design</p>
+          <h3 class="portfolio-title">Screen Illustrations</h3>
+          <p class="portfolio-category">Design</p>
         </div>
+        </a>
       </li>
 
       <li class="card-set-portfolio-item">
-        <div class="img-transform">
+        <a class="portfolio-link" href="">
+        <div class="img-container">
         <img src="./images/prj6.jpg" alt="Online Courses platform" width="360" height="300">
               <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-        <div class="text-container">
-          <h3 class="portfolio-list">Online Courses</h3>
-          <p class="portfolio-descrsption">Marketing</p>
         </div>
+        <div class="text-container">
+          <h3 class="portfolio-title">Online Courses</h3>
+          <p class="portfolio-category">Marketing</p>
+        </div>
+        </a>
        </li>
 
     </ul>
@@ -370,28 +381,28 @@
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/instagram .jpg"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/twitter .jpg"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/facebook .jpg"></use>
+                  <use href="./images/icon.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/linkedin .jpg"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
