Replace single CVG files with sprite images/icon.svg

--- a/index.html
+++ b/index.html
@@ -52,43 +52,43 @@
   <!-- FEATURES -->
   <section class="section">
     <div class="container">
-    <h2 class="advanteges-list visually-hidden">Our features</h2>
+    <h2 class="advantages-list visually-hidden">Our features</h2>
     <ul class="card-set">
       <li class="card-set-item">
-        <div class="advanteges-list-icons-conteiner">
+        <div class="advantages-list-icons-container">
           <svg class="" width="64" height="64">
-            <use href="./images/icon.svg#icons-antenna"></use>
+            <use href="./images/icons.svg#icon-antenna"></use>
           </svg>
         </div>
-        <h3 class="advanteges-list">Strategy</h3>
-        <p class="advanteges-list-description">Our goal is to identify the business problem and deliver a creative solution.</p>
+        <h3 class="advantaqges-list">Strategy</h3>
+        <p class="advantages-list-description">Our goal is to identify the business problem and deliver a creative solution.</p>
       </li>
       <li class="card-set-item">
-        <div class="advanteges-list-description">
+        <div class="advantages-list-icons-container">
           <svg class="" width="64" height="64">
-            <use href="./images/icon.svg#icons-clock"></use>
+            <use href="./images/icons.svg#icon-clock"></use>
           </svg>
         </div>
-        <h3 class="advanteges-list">Punctuality</h3>
-        <p class="advanteges-list-description">We deliver the key message on time and within budget.</p>
+        <h3 class="advantages-list">Punctuality</h3>
+        <p class="advantages-list-description">We deliver the key message on time and within budget.</p>
       </li>
       <li class="card-set-item">
-        <div class="advanteges-list-icons-conteiner">
+        <div class="advantages-list-icons-conteiner">
           <svg class="" width="64" height="64">
-            <use href="./images/icon.svg#icons-diagram"></use>
+            <use href="./images/icons.svg#icon-diagram"></use>
           </svg>
         </div>
-        <h3 class="advanteges-list">Diligence</h3>
-        <p class="advanteges-list-description">We validate growth opportunities while minimizing risk.</p>
+        <h3 class="advantages-list">Diligence</h3>
+        <p class="advantages-list-description">We validate growth opportunities while minimizing risk.</p>
       </li>
       <li class="features-item">
-        <div class="advanteges-list-icons-conteiner">
+        <div class="advantages-list-icons-container">
           <svg class="" width="64" height="64">
-            <use href="./images/icon.svg#icons-astronaut"></use>
+            <use href="./images/icons.svg#icon-astronaut"></use>
           </svg>
         </div>
-        <h3 class="advanteges-list">Technologies</h3>
-        <p class="advanteges-list-description">We craft modern, accessible digital experiences.</p>
+        <h3 class="advantages-list">Technologies</h3>
+        <p class="advantages-list-description">We craft modern, accessible digital experiences.</p>
       </li>
     </ul>
     </div>
@@ -99,7 +99,7 @@
     <div class="container">
     <h2 class="our-team-title">Our Team</h2>
 
-    <ul class="card-set-item">
+    <ul class="card-set">
       <li class="our-team-list">
         <img src="./images/person1.jpg" alt="Mark Guerrero — Product Designer" width="264" height="260">
         <div class="text-container-team">
@@ -109,28 +109,28 @@
         <li class="icons-conteiner">
           <a href="" class="icons-social-networks" aria-label="Instagram">
              <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon.svg#icon-instagram"></use>
+              <use href="./images/icons.svg#icon-instagram"></use>
              </svg>
           </a>
         </li>
       <li class="icons-conteiner">
         <a href="" class="icons-social-networks" aria-label="Twitter">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon.svg#icon-twitter"></use>
+              <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
         </a>
       </li>
       <li class="icons-conteiner">
-         <a href="" class="icons-social-networks" aria-label="Facabook">
+         <a href="" class="icons-social-networks" aria-label="Facebook">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon.svg#icon-facebook"></use>
+              <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
          </a>
       </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks" aria-label="Linkedin">
+        <a href="" class="icons-social-networks" aria-label="LinkedIn">
           <svg class="svg-icons" width="16" height="16">
-            <use href="./images/icon.svg#icon-linkedin"></use>
+            <use href="./images/icons.svg#icon-linkedin"></use>
           </svg>
         </a>
       </li>
@@ -146,26 +146,26 @@
           <li class="icons-conteiner">
             <a href="" class="icons-social-networks" aria-label="Instagram">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icon.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="icons-conteiner">
             <a href="" class="icons-social-networks" aria-label="Twitter">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icon.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
              <li class="icons-conteiner">
-                <a href="" class="icons-social-networks" aria-label="Facabook">
+                <a href="" class="icons-social-networks" aria-label="Facebook">
                     <svg class="svg-icons" width="16" height="16">
-                       <use href="./images/icon.svg#icon-facebook"></use>
+                       <use href="./images/icons.svg#icon-facebook"></use>
                          </svg>
                        </a>
                     </li>
                     <li class="icons-conteiner">
-                        <a href="" class="icons-social-networks" aria-label="Linkedin">
+                        <a href="" class="icons-social-networks" aria-label="LinkedIn">
                             <svg class="svg-icons" width="16" height="16">
                              <use href="./images/icons.svg#icon-linkedin"></use>
                           </svg>
@@ -185,28 +185,28 @@
         <li class="icons-conteiner">
           <a href="" class="icons-social-networks" aria-label="Instagram">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icon.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
        </li>
         <li class="icons-conteiner">
           <a href="" class="icons-social-networks" aria-label="Twitter">
             <svg class="svg-icons" width="16" height="16">
-             <use href="./images/icon.svg#icon-twitter"></use>
+             <use href="./images/icons.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
        <li class="icons-conteiner">
-        <a href="" class="icons-social-networks" aria-label="Facabook">
+        <a href="" class="icons-social-networks" aria-label="Facebook">
           <svg class="svg-icons" width="16" height="16">
-          <use href="./images/icon.svg#icon-facebook"></use>
+          <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
       </a>
     </li>
    <li class="icons-conteiner">
-     <a href="" class="icons-social-networks" aria-label="Linkedin">
+     <a href="" class="icons-social-networks" aria-label="LinkedIn">
        <svg class="svg-icons" width="16" height="16">
-         <use href="./images/icon.svg#icon-linkedin"></use>
+         <use href="./images/icons.svg#icon-linkedin"></use>
        </svg>
       </a>
     </li>
@@ -222,28 +222,28 @@
           <li class="icons-conteiner">
           <a href="" class="icons-social-networks" aria-label="Instagram">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon.svg#icon-instagram"></use>
+              <use href="./images/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
      <li class="icons-conteiner">
       <a href="" class="icons-social-networks" aria-label="Twitter">
         <svg class="svg-icons" width="16" height="16">
-          <use href="./images/icon.svg#icon-twitter"></use>
+          <use href="./images/icons.svg#icon-twitter"></use>
        </svg>
       </a>
      </li>
     <li class="icons-conteiner">
-      <a href="" class="icons-social-networks" aria-label="Facabook">
+      <a href="" class="icons-social-networks" aria-label="Facebook">
         <svg class="svg-icons" width="16" height="16">
-          <use href="./images/icon.svg#icon-facebook"></use>
+          <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
        </a>
       </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks" aria-label="Linkedin">
+        <a href="" class="icons-social-networks" aria-label="LinkedIn">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/icon.svg#icon-linkedin"></use>
+              <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </a>
        </li>
@@ -381,28 +381,28 @@
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/icon.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/icon.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/icon.svg#facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-conteiner">
               <a href="" class="icons-social-networks-footer">
                 <svg class="svg-icons" width="24" height="24">
-                  <use href="./images/icon.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
