Fix features classes, clean team card markup, hero image path

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <use href="./images/icons.svg#icon-antenna"></use>
           </svg>
         </div>
-        <h3 class="advantaqges-list">Strategy</h3>
+        <h3 class="advantages-list">Strategy</h3>
         <p class="advantages-list-description">Our goal is to identify the business problem and deliver a creative solution.</p>
       </li>
       <li class="card-set-item">
@@ -73,7 +73,7 @@
         <p class="advantages-list-description">We deliver the key message on time and within budget.</p>
       </li>
       <li class="card-set-item">
-        <div class="advantages-list-icons-conteiner">
+        <div class="advantages-list-icons-container">
           <svg class="" width="64" height="64">
             <use href="./images/icons.svg#icon-diagram"></use>
           </svg>
@@ -81,7 +81,7 @@
         <h3 class="advantages-list">Diligence</h3>
         <p class="advantages-list-description">We validate growth opportunities while minimizing risk.</p>
       </li>
-      <li class="features-item">
+      <li class="card-set-item">
         <div class="advantages-list-icons-container">
           <svg class="" width="64" height="64">
             <use href="./images/icons.svg#icon-astronaut"></use>
@@ -137,45 +137,43 @@
     </ul>
     </div>
   </li>
-      <li class="our-team-list">
-        <img src="./images/person2.jpg" alt="Tom Ford — Frontend Developer" width="264" height="260">
-        <div class="text-container-team">
-        <h3 class="our-team-list-name">Tom Ford</h3>
-        <p class="our-team-list-description">Frontend Developer</p>
-        <ul class="items-social-networks">
-          <li class="icons-conteiner">
-            <a href="" class="icons-social-networks" aria-label="Instagram">
-              <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icons-conteiner">
-            <a href="" class="icons-social-networks" aria-label="Twitter">
-              <svg class="svg-icons" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-             <li class="icons-conteiner">
-                <a href="" class="icons-social-networks" aria-label="Facebook">
-                    <svg class="svg-icons" width="16" height="16">
-                       <use href="./images/icons.svg#icon-facebook"></use>
-                         </svg>
-                       </a>
-                    </li>
-                    <li class="icons-conteiner">
-                        <a href="" class="icons-social-networks" aria-label="LinkedIn">
-                            <svg class="svg-icons" width="16" height="16">
-                             <use href="./images/icons.svg#icon-linkedin"></use>
-                          </svg>
-                      </a>
-                     </li>
-                    </ul>
-                </div>
-            </li>
-        </div>
+<li class="our-team-list">
+  <img src="./images/person2.jpg" alt="Tom Ford — Frontend Developer" width="264" height="260">
+  <div class="text-container-team">
+    <h3 class="our-team-list-name">Tom Ford</h3>
+    <p class="our-team-list-description">Frontend Developer</p>
+    <ul class="items-social-networks">
+      <li class="icons-conteiner">
+        <a href="" class="icons-social-networks" aria-label="Instagram">
+          <svg class="svg-icons" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
       </li>
+      <li class="icons-conteiner">
+        <a href="" class="icons-social-networks" aria-label="Twitter">
+          <svg class="svg-icons" width="16" height="16">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="icons-conteiner">
+        <a href="" class="icons-social-networks" aria-label="Facebook">
+          <svg class="svg-icons" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="icons-conteiner">
+        <a href="" class="icons-social-networks" aria-label="Linkedin">
+          <svg class="svg-icons" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</li>
       <li class="our-team-list">
         <img src="./images/person3.jpg" alt="Camila Garcia — Marketing" width="264" height="260">
          <div class="text-container-team">
@@ -204,7 +202,7 @@
       </a>
     </li>
    <li class="icons-conteiner">
-     <a href="" class="icons-social-networks" aria-label="LinkedIn">
+     <a href="" class="icons-social-networks" aria-label="Linkedin">
        <svg class="svg-icons" width="16" height="16">
          <use href="./images/icons.svg#icon-linkedin"></use>
        </svg>
@@ -241,7 +239,7 @@
        </a>
       </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks" aria-label="LinkedIn">
+        <a href="" class="icons-social-networks" aria-label="Linkedin">
             <svg class="svg-icons" width="16" height="16">
               <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
