--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </a>
       </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks" aria-label="Linkedin">
+        <a href="" class="icons-social-networks" aria-label="LinkedIn">
           <svg class="svg-icons" width="16" height="16">
             <use href="./images/icons.svg#icon-linkedin"></use>
           </svg>
@@ -202,7 +202,7 @@
       </a>
     </li>
    <li class="icons-conteiner">
-     <a href="" class="icons-social-networks" aria-label="Linkedin">
+     <a href="" class="icons-social-networks" aria-label="LinkedIn">
        <svg class="svg-icons" width="16" height="16">
          <use href="./images/icons.svg#icon-linkedin"></use>
        </svg>
@@ -239,7 +239,7 @@
        </a>
       </li>
       <li class="icons-conteiner">
-        <a href="" class="icons-social-networks" aria-label="Linkedin">
+        <a href="" class="icons-social-networks" aria-label="LinkedIn">
             <svg class="svg-icons" width="16" height="16">
               <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
