Addeb social media icons to icons.svg and updated team/footer icons

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                     </div>
                 </li>
                 <li class="our-team-list">
-                    <img src="./images/person2.jpg" alt="Tom Ford avatar" width="264"> 
+                    <img src="./images/person2.jpg"
+                     alt="Tom Ford avatar" width="264"> 
                     <div class="text-container-team">
                     <h3 class="our-team-list-name">Tom Ford</h3>
                     <p class="our-team-list-description">Frontend Developer</p>
