--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h2 class="our-team-title">Our Team</h2>
             <ul class="card-set-team">
                 <li class="our-team-list">
-                    <img src="./images/person1.jpg" alt="Mark Guerrero avatar" width="264"> 
+                    <img src="./images/person1.jpg" alt="Mark Guerrero avatar" width="264" height="260"> 
                     <div class="text-container-team">
                     <h3 class="our-team-list-name">Mark Guerrero</h3>
                     <p class="our-team-list-description">Product Designer</p>
@@ -141,8 +141,7 @@
                     </div>
                 </li>
                 <li class="our-team-list">
-                    <img src="./images/person2.jpg"
-                     alt="Tom Ford avatar" width="264"> 
+                    <img src="./images/person2.jpg" alt="Tom Ford avatar" width="264"> 
                     <div class="text-container-team">
                     <h3 class="our-team-list-name">Tom Ford</h3>
                     <p class="our-team-list-description">Frontend Developer</p>
